--- a/MusicPlaylist/MusicPlaylist/MusicPlaylist.csproj
+++ b/MusicPlaylist/MusicPlaylist/MusicPlaylist.csproj
@@ -46,14 +46,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddSongs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddSongs.Designer.cs">
+      <DependentUpon>AddSongs.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AllSongs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AllSongs.Designer.cs">
+      <DependentUpon>AllSongs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="PlayList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PlayList.Designer.cs">
+      <DependentUpon>PlayList.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Song.cs" />
+    <EmbeddedResource Include="AllSongs.resx">
+      <DependentUpon>AllSongs.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
