--- a/MusicPlaylist/MusicPlaylist/MusicPlaylist.csproj
+++ b/MusicPlaylist/MusicPlaylist/MusicPlaylist.csproj
@@ -52,11 +52,11 @@
     <Compile Include="AddSongs.Designer.cs">
       <DependentUpon>AddSongs.cs</DependentUpon>
     </Compile>
-    <Compile Include="AllSongs.cs">
+    <Compile Include="Allsongs.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AllSongs.Designer.cs">
-      <DependentUpon>AllSongs.cs</DependentUpon>
+    <Compile Include="Allsongs.Designer.cs">
+      <DependentUpon>Allsongs.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -73,8 +73,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Song.cs" />
-    <EmbeddedResource Include="AllSongs.resx">
-      <DependentUpon>AllSongs.cs</DependentUpon>
+    <EmbeddedResource Include="Allsongs.resx">
+      <DependentUpon>Allsongs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
