--- a/MusicPlaylist/MusicPlaylist/MusicPlaylist.csproj
+++ b/MusicPlaylist/MusicPlaylist/MusicPlaylist.csproj
@@ -65,6 +65,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="InputPopUp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InputPopUp.Designer.cs">
+      <DependentUpon>InputPopUp.cs</DependentUpon>
+    </Compile>
     <Compile Include="PlayList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,6 +88,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="InputPopUp.resx">
+      <DependentUpon>InputPopUp.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
