--- a/MusicPlaylist/MusicPlaylist/MusicPlaylist.csproj
+++ b/MusicPlaylist/MusicPlaylist/MusicPlaylist.csproj
@@ -77,8 +77,20 @@
     <Compile Include="PlayList.Designer.cs">
       <DependentUpon>PlayList.cs</DependentUpon>
     </Compile>
+    <Compile Include="Playlists_List.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Playlists_List.Designer.cs">
+      <DependentUpon>Playlists_List.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoveSongs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RemoveSongs.Designer.cs">
+      <DependentUpon>RemoveSongs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Song.cs" />
     <EmbeddedResource Include="AddSongs.resx">
       <DependentUpon>AddSongs.cs</DependentUpon>
@@ -92,6 +104,12 @@
     <EmbeddedResource Include="InputPopUp.resx">
       <DependentUpon>InputPopUp.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PlayList.resx">
+      <DependentUpon>PlayList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Playlists_List.resx">
+      <DependentUpon>Playlists_List.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -101,6 +119,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RemoveSongs.resx">
+      <DependentUpon>RemoveSongs.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
