--- a/MemoryGame/MemoryGame/MemoryGame.csproj
+++ b/MemoryGame/MemoryGame/MemoryGame.csproj
@@ -58,6 +58,12 @@
     <Compile Include="GameStarted.Designer.cs">
       <DependentUpon>GameStarted.cs</DependentUpon>
     </Compile>
+    <Compile Include="Highscores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Highscores.Designer.cs">
+      <DependentUpon>Highscores.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -65,6 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GameStarted.resx">
       <DependentUpon>GameStarted.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Highscores.resx">
+      <DependentUpon>Highscores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
